--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hello, GitHub Actions!</title>
-</head>
-<body>
-    <h1>Hello, GitHub Actions!</h1>
-</body>
-</html>
+>THis is Github Actions 
