--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
->THis is Github Actions 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Hello, GitHub Actions... This is the Updatteee!</title>
+</head>
+<body>
+    <h1>Hello, GitHub Actions The Updateeeeeee!</h1>
+</body>
+</html> 
