--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello, GitHub Actions... This is the Updatteee!</title>
+    <title>Hello, GitHub Actions!</title>
 </head>
 <body>
-    <h1>Hello, GitHub Actions The Updateeeeeee!</h1>
+    <h1>Hello, GitHub Actions!</h1>
 </body>
-</html> 
+</html>
